assets/css/customisations.scss
/* ... */
.quote {
    margin-top: 35px;
    margin-bottom: 35px;
    text-align: center;
    font-size: larger;
    padding: 40px;
    background-color: #d8eef5;
    border-radius: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

.light-quote {
    background-color: whitesmoke;
}

.quote p {
    margin: 0;
    font-size: 1.2rem;
    font-weight: bolder;
}

.center {
    text-align: center;
    font-size: larger;
}

ul, ol {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 35px;
    margin-bottom: 0px;
    list-style-position: outside;
}

ul li {
    padding-left: 10px;
}

ol li {
    padding-left: 10px;
}

li {
    padding-top: 5px;
    padding-bottom: 5px;
}

iframe {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    margin-bottom: 30px;
    height: auto;
    width: 100%;
    aspect-ratio: 16 / 9;
}

.post-preview {
    margin-top: 30px !important;
    margin-bottom: 0px;
    padding: 1.25rem;
    border-radius: 18px;
    background: linear-gradient(180deg, #f7fbfd 0%, #e6f3f7 100%);
    border: 1px solid #c9e4ee;
    box-shadow: 0 12px 30px rgba(20, 60, 80, 0.08);
    transition: transform 160ms ease, box-shadow 160ms ease, background 160ms ease;
}

.post-preview:hover{
    background: linear-gradient(180deg, #eff8fb 0%, #dceef5 100%);
    box-shadow: 0 14px 32px rgba(20, 60, 80, 0.12);
    transform: translateY(-1px);
    cursor: pointer;
}

.blog-image {
    background-color: rgba(169, 204, 215, 0.5);
    display: block;
    margin-left: auto;
    margin-right: auto;
    border: 2px solid lightblue;
}

.pagination {
    margin-top: 28px;
    display: grid;
    grid-template-columns: auto 1fr auto;
    align-items: center;
    column-gap: 12px;
}

.pagination > :first-child {
    justify-self: start;
}

.pagination > :last-child {
    justify-self: end;
}

.pagination-status {
    text-align: center;
    font-weight: 600;
}

.pagination-control {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 160px;
    height: 50px;
    border-radius: 8px;
    border: 1px solid transparent;
    background-color: #d8eef5;
    color: $font-colour;
    text-decoration: none !important;
    font-size: 1rem;
    font-weight: 700;
    line-height: 1;
    vertical-align: middle;
    padding: 0;
}

.pagination-control:hover {
    background-color: rgb(142, 201, 221);
    text-decoration: none !important;
}

.pagination-control:focus,
.pagination-control:focus-visible {
    text-decoration: none !important;
}

.pagination-control.is-disabled {
    border: none;
    background-color: #f6f8fa;
    color: #9aa6b2;
    cursor: not-allowed;
}

.blog-preview-image {
    object-fit: cover;
    // width: 100%;
    // height: 100px;
    white-space: nowrap;
}

.author-column-left {
    width: 200px;
}

.blog-posts {
    display: flex;
}

.blog-image {
    width: 35%;
    height: 200px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.blog-image img {
    width: 100%;
    margin-top: auto !important;
    margin-bottom: auto;
}

.blog-excerpt {
    width: 65%;
    height: 200px;
    padding-left: 40px;
    padding-right: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    position: relative;
}

.blog-excerpt-content {
    height: fit-content;
    margin-top: auto;
    margin-bottom: auto;
}

@media (max-width: 673px) {
    .blog-excerpt {
        height: fit-content;
    }

    .blog-posts {
        display: block;
    }

    .blog-image{
        width: 100%;
        height: auto;
    }

    .blog-excerpt {
        width: 100%;
        margin-top: 10px;
        padding-left: 10px;
        padding-right: 10px;
    }

    .blog-excerpt-content {
        padding-bottom: 40px;
    }
}

.read-more {
    width: 100%;
    color: #1e6bb8;
    text-align: right;
    font-weight: normal;
    margin-top: auto !important;
    margin-bottom: 0px !important;
    position: absolute;
    bottom: 10px;
    right: 10px
}

.read-more i {
    padding-left: 5px;
    color: #1e6bb8;
}

.post-title {
    float: left;
    font-size: larger;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
    color: $selected-colour !important;
}

.post-date-wide {
    float: right;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
    padding-top: 7px;
    height: 38px;
}

.post-date-mobile {
    float: right;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
    padding-top: 12px;
    height: 38px;
    display: none;
}

.post-preview-header {
    //min-height: 38px;
    overflow: hidden;
    padding-bottom: 5px;
}

.author-card {
    display: flex;
}

.author-profile-picture {
    height: 200px;
    width: 200px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.author-profile-name {
    font-weight: bold;
    margin-bottom: 5px !important;
    padding-left: 10px !important;
}

.author-name {
    margin-top: 10px;
    margin-bottom: 15px;
    display: flex;
}

.author-description {
    padding-left: 30px;
    padding-right: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.word-count {
    margin-left: auto;
}

.post-word-count {
    float: right;
    margin-left: auto;
}

.post-preview-image {
    padding-top: 0px;
}
/* ... */

